--- a/Animation/transitions/Slide_in_menu/style.css
+++ b/Animation/transitions/Slide_in_menu/style.css
@@ -6,4 +6,59 @@ body {
     width: 100vw;
     height:100vh;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.toggle {
+    height: 50px;
+    width: 50px;
+    border: 0;
+    border-radius: 50px;
+    background-color: rgb(194, 82, 82);
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
+nav {
+    width: 33%;
+    min-width: 400px;
+    height: 100%;
+    padding: 100px 30px;
+    border: 1px solid gray;
+    transition: 1s;
+    background-color: rgb(17, 17, 17);
+    color:rgb(230, 230, 230)
+}
+
+.open {
+    margin-left: -100%;
+}
+
+nav ul {
+    padding: 0;
+}
+
+nav ul li {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    margin: 60px 0;
+}
+
+nav ul li span {
+    grid-row: 1 / 3;
+    font-size: 20px;
+    color: gray;
+    padding-right: 20px;
+}
+
+nav ul li a {
+    font-size: 20px;
+    text-decoration: none;
+    color: white;
+}
+
+nav ul li p {
+    color: gray;
+    padding-top: 20px;
 }
