--- a/Animation/Keyframes/four_corners/style.css
+++ b/Animation/Keyframes/four_corners/style.css
@@ -6,4 +6,47 @@ body {
     width: 100vw;
     height:100vh;
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: wheat;
+}
+
+main {
+    width: 500px;
+    height: 500px;
+    background-color: white;
+    box-shadow: 0px 0px 50px #00000070;
+    position: relative;
+}
+
+main div {
+    width: 50px;
+    height: 50px;
+    background-color: rgb(175, 124, 104);
+    animation: around 10s ease-in-out infinite;
+    position: absolute;
+}
+
+@keyframes around {
+    0% {
+        left: 0;
+        top: 0;
+    }
+    25% {
+        left: 450px;
+        top: 0px;
+    }
+    50% {
+        left: 450px;
+        top: 450px;
+    }
+    75% {
+        left: 0;
+        top: 450px;
+    }
+    100% {
+        left: 0;
+        top: 0;
+    }
 }
