--- a/Animation/Keyframes/spinner/style.css
+++ b/Animation/Keyframes/spinner/style.css
@@ -6,4 +6,29 @@ body {
     width: 100vw;
     height:100vh;
     margin: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main div {
+    width: 5px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: brown;
+    animation: spin 2s linear infinite;
+    transform-origin: center bottom;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
