--- a/Animation/Keyframes/stopwatch/style.css
+++ b/Animation/Keyframes/stopwatch/style.css
@@ -6,4 +6,72 @@ body {
     width: 100vw;
     height:100vh;
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main {
+    width: 400px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid gray;
+    border-radius: 200px;
+}
+
+main .dot {
+    width: 15px;
+    height: 15px;
+    background-color: gray;
+    z-index: 5;
+    position: absolute;
+}
+
+main div {
+    width: 0px;
+    height: 0px;
+    border-radius: 10px;
+    position: relative;
+    
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+main div div {
+    background-color: gray;
+    width: 5px;
+    height: 190px;
+    border-radius: 10%;
+    animation: clock 900s linear infinite; /* 15min */
+    transform-origin: 50% 100%;
+    position: absolute;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+main div div div {
+    background-color: red;
+    width: 3px;
+    height: 190px;
+    border-radius: 10%;
+    animation: clock 60s linear infinite;
+    transform-origin: 50% 100%;
+    position: absolute;
+}
+
+@keyframes clock {
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
