--- a/13.APIs/flickr/style.css
+++ b/13.APIs/flickr/style.css
@@ -12,12 +12,33 @@
     margin: 5px;
     border-radius: 5px;
 }
-
-.placeholderImg {
-    display: inline-block;
-    width: 150px;
-    height: 150px;
-    background-color: lightgray;
-    margin: 5px;
-    border-radius: 5px;
+.searchedPhotoThumbnail:hover {
+    opacity: 0.8;
 }
+
+
+#lightbox {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.7); 
+}
+
+.lightbox-photos {
+    margin: auto;
+    width: 80%;
+}
+
+#lightbox-caption {
+    text-align: center;
+    border-radius: 5px;
+    padding: 2px 16px;
+    color: white;
+  }
